--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment1",
+  "name": "taste_finder",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "type": "module",
@@ -13,9 +13,9 @@
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.0.4",
+    "@expo/webpack-config": "^0.17.0",
     "@react-native-material/core": "^1.3.7",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-picker/picker": "2.4.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
@@ -24,22 +24,22 @@
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "expo": "^46.0.21",
-    "expo-constants": "~14.0.2",
-    "expo-file-system": "~15.1.1",
+    "expo-constants": "~13.2.4",
+    "expo-file-system": "~14.1.0",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.9",
     "react-native-autocomplete-dropdown": "*",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "4.9.2",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "^3.0.2",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
